[tool.poetry]
name = "pytorch-neat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "??"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
neat-python = ">=0.92"
numpy = ">=1.23.5"
gym = ">=0.26"
click = ">=6.7"
torch = ">=2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
